--- a/gp23-204-cpp-oop/gp23-204-cpp-oop.vcxproj
+++ b/gp23-204-cpp-oop/gp23-204-cpp-oop.vcxproj
@@ -138,6 +138,9 @@
   <ItemGroup>
     <ClInclude Include="String.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
